--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="Css/style.css">
 
     <h1>Welcome to console quiz</h1>
+    <h2>Please open up your browser console</h2>
 </head>
 <body>
     
